fix: refactory NTools to zTools

--- a/NAuth/NAuth.csproj
+++ b/NAuth/NAuth.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <!-- Dependencies from NAuth.ACL -->
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
-    <PackageReference Include="NTools.ACL" Version="0.2.0" />
+    <PackageReference Include="zTools" Version="*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 </Project>
