--- a/NAuth.Application/NAuth.Application.csproj
+++ b/NAuth.Application/NAuth.Application.csproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
-    <PackageReference Include="NTools.ACL" Version="0.2.0" />
+    <PackageReference Include="zTools" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
