--- a/NAuth.Domain/NAuth.Domain.csproj
+++ b/NAuth.Domain/NAuth.Domain.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NoobsMuc.Coinmarketcap.Client" Version="3.1.1" />
-    <PackageReference Include="NTools.ACL" Version="0.2.0" />
+    <PackageReference Include="zTools" Version="*" />
     <PackageReference Include="Stripe.net" Version="48.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
